--- a/.config
+++ b/.config
@@ -1,6 +1,36 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
+CONFIG_NGINX_HEADERS_MORE=y
+CONFIG_NGINX_HTTP_ACCESS=y
+CONFIG_NGINX_HTTP_AUTH_BASIC=y
+CONFIG_NGINX_HTTP_AUTOINDEX=y
+CONFIG_NGINX_HTTP_BROWSER=y
+CONFIG_NGINX_HTTP_CACHE=y
+CONFIG_NGINX_HTTP_CHARSET=y
+CONFIG_NGINX_HTTP_EMPTY_GIF=y
+CONFIG_NGINX_HTTP_FASTCGI=y
+CONFIG_NGINX_HTTP_GEO=y
+CONFIG_NGINX_HTTP_GZIP=y
+CONFIG_NGINX_HTTP_LIMIT_CONN=y
+CONFIG_NGINX_HTTP_LIMIT_REQ=y
+CONFIG_NGINX_HTTP_MAP=y
+CONFIG_NGINX_HTTP_MEMCACHED=y
+CONFIG_NGINX_HTTP_PROXY=y
+CONFIG_NGINX_HTTP_REFERER=y
+CONFIG_NGINX_HTTP_REWRITE=y
+CONFIG_NGINX_HTTP_SCGI=y
+CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
+CONFIG_NGINX_HTTP_SSI=y
+CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
+CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
+CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
+CONFIG_NGINX_HTTP_USERID=y
+CONFIG_NGINX_HTTP_UWSGI=y
+CONFIG_NGINX_NAXSI=y
+CONFIG_NGINX_PCRE=y
+CONFIG_NGINX_UBUS=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_acme=y
@@ -50,7 +80,11 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-udptunnel4=y
+CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
@@ -63,15 +97,19 @@ CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_PACKAGE_libflac=y
+CONFIG_PACKAGE_libfreetype=y
 CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libhttp-parser=y
 CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libjpeg=y
+CONFIG_PACKAGE_libminiupnpc=y
+CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libnl-core=y
 CONFIG_PACKAGE_libnl-genl=y
 CONFIG_PACKAGE_libogg=y
 CONFIG_PACKAGE_libpcre2-16=y
+CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libvorbis=y
@@ -85,6 +123,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
@@ -109,12 +148,17 @@ CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-app-xlnetacc=y
+CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
@@ -126,18 +170,33 @@ CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_nginx=y
 CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_npc=y
 CONFIG_PACKAGE_open-vm-tools=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_p910nd=y
+CONFIG_PACKAGE_php7=y
+CONFIG_PACKAGE_php7-fpm=y
+CONFIG_PACKAGE_php7-mod-curl=y
+CONFIG_PACKAGE_php7-mod-gd=y
+CONFIG_PACKAGE_php7-mod-iconv=y
+CONFIG_PACKAGE_php7-mod-json=y
+CONFIG_PACKAGE_php7-mod-mbstring=y
+CONFIG_PACKAGE_php7-mod-opcache=y
+CONFIG_PACKAGE_php7-mod-session=y
+CONFIG_PACKAGE_php7-mod-zip=y
 CONFIG_PACKAGE_python=y
 CONFIG_PACKAGE_python-base=y
 CONFIG_PACKAGE_python-codecs=y
@@ -174,9 +233,15 @@ CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_v2ray-plugin=y
+CONFIG_PACKAGE_vsftpd-alt=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PHP7_LIBFREETYPE=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
 CONFIG_SQLITE3_FTS3=y
 CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
+CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
